--- a/src/components/SingleMovie/SingleMovie.css
+++ b/src/components/SingleMovie/SingleMovie.css
@@ -4,7 +4,7 @@
     width: 200px;
     padding: 5px;
     margin: 5px 0;
-    background-color: #282c34;
+    background-color: #3a3d44;
     border-radius: 10px;
     position: relative;
     font-family: "Montserrat", sans-serif;
