--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   text-transform: uppercase;
-  background-color: #39445a;
+  background-color: #222831;
   font-family: "Montserrat", sans-serif;
   font-size: 5vw;
   padding-bottom: 15px;
